# hdap

./: .ghc.environment.x86_64-linux-9.2.8  .gitignore  CHANGELOG.md  dap-tui.cabal  flake.nix  fourmolu.yaml
app/: Main.hs
src/: Cli.hs  Dap.hs  MyLib.hs  Utils.hs
src/Dap/: Connection.hs  Env.hs  Event.hs  MsgIn.hs  MsgOut.hs  Parse.hs  Protocol.hs  Request.hs  Response.hs  Session.hs  Types.hs
src/Dap/Data/: Request.hs
