cabal-version:      2.4
name:               hdap
version:            0.1.0.0
synopsis:
description:        DAP client
homepage:
license:
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com
category:           Development
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Cli
    Dap
    Dap.Connection
    Dap.Env
    Dap.Event
    Dap.MsgIn
    Dap.MsgOut
    Dap.Protocol
    Dap.Request
    Dap.Response
    Dap.Session
    Dap.Types
    Utils

  build-depends:
    , aeson
    , async
    , attoparsec
    , attoparsec-aeson
    , base
    , bytestring
    , case-insensitive
    , co-log-core
    , containers
    , filepath
    , indexed-traversable
    , network
    , network-simple
    , pretty-simple
    , prettyprinter
    , process
    , scientific
    , stm
    , text
    , transformers
    , unliftio
    , vector
    , websockets
    , word8

  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:
    -Wall -Wno-unused-imports -Wno-missing-export-lists
    -Wno-name-shadowing -Wno-unused-local-binds -Wno-unused-matches

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

executable hdap
  main-is:          Main.hs
  build-depends:
    , base
    , hdap

  ghc-options:      -threaded
  hs-source-dirs:   app
  default-language: GHC2021

test-suite hdap-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base
